# aoc-cpp

./: CMakeLists.txt
2023/: 05.cpp  05.h  lib.h
include/: Timer.h  aoc.h  lib.h
src/: main.cpp
